--- a/app/views/shared/_new-listing-form.html.haml
+++ b/app/views/shared/_new-listing-form.html.haml
@@ -59,6 +59,34 @@
           %span.listing__form__detail__box__form-group__require
             必須
           = f.collection_select :category_id, Category.all.take(13), :id, :name, {prompt: "---"}, {class: 'listing__form__detail__box__form-group__category-select'}
+        
+        .listing__form__detail__box__form-group{style: 'display:none;'}
+          %label
+            カテゴリー
+          %span.listing__form__detail__box__form-group__require
+            必須
+          = f.collection_select :category_id, Category.all.take(13), :id, :name, {prompt: "---"}, {class: 'listing__form__detail__box__form-group__category-select'}
+
+        .listing__form__detail__box__form-group{style: 'display:none;'}
+          %label
+            カテゴリー
+          %span.listing__form__detail__box__form-group__require
+            必須
+          = f.collection_select :category_id, Category.all.take(13), :id, :name, {prompt: "---"}, {class: 'listing__form__detail__box__form-group__category-select'}
+
+
+          -# %select{class: 'listing__form__detail__box__form-group__category-select'}
+          -#   - Category.all.take(13).each do |e|
+          -#     %option{value: e.id}=e.name
+          -#     %select
+          -#       - e.children.each do |f|
+          -#         %option{value:f.id}=f.name
+
+          -#         .listing__form__detail__box__form-group{style:'display:none;'}
+          -#         .listing__form__detail__box__form-group{style:'display:none;'}
+          -#           -f.grandchildren.each do |g|
+          -#             %select
+                        -# %option{value: g.id}=g.id
             
         .listing__form__detail__box__form-group
           %label
