--- a/app/assets/stylesheets/users/_mypage-sidebar.scss
+++ b/app/assets/stylesheets/users/_mypage-sidebar.scss
@@ -8,7 +8,7 @@
   .mypage-nav-list {
 
     
-    .mypage-nav-list-itemavtive {
+    .mypage-nav-list-item.avtive {
       background: #eee;
       font-weight: 600;
       position: relative;
@@ -23,7 +23,7 @@
       }
     }
 
-    .mypage-nav-list-itemavtive:hover {
+    .mypage-nav-list-item.avtive:hover {
       i{ 
         right: 5%;
       }
