サイドバーの色付けの続き

--- a/app/assets/stylesheets/users/mypage.scss
+++ b/app/assets/stylesheets/users/mypage.scss
@@ -37,6 +37,7 @@
     }
     .mypage__profile__content-box{
       padding: 40px 16px;
+      background: #fff;
       textarea{
         box-sizing: border-box;
         display: block;
