サイドバーのマイページ、プロフィール、ログアウトにパスを設定

--- a/app/views/users/_mypage-main.html.haml
+++ b/app/views/users/_mypage-main.html.haml
@@ -1,4 +1,4 @@
-.mypage__main
+.mypage__main{"data":@subject_active}
   .mypage__main__usericon
     = link_to("/users") do
       =image_tag "member_photo_noimage_thumb.png"
