--- a/app/views/users/_mypagesidebar3.html.haml
+++ b/app/views/users/_mypagesidebar3.html.haml
@@ -1,3 +1,3 @@
 %li.mypage-nav-list-item
-  = link_to(mypagesidebar3,'/users',)
+  = link_to(mypagesidebar3[:name],mypagesidebar3[:link])
   %i.fas.fa-chevron-right
