トップページとマイページへのリンクを追加

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -300,6 +300,7 @@
             position: relative;
             cursor: pointer;
             font-size: 14px;
+            display: block;
             img{
               border-radius: 50%;
               vertical-align: middle;
