販売価格表示の実装

--- a/app/views/shared/_new-listing-form.html.haml
+++ b/app/views/shared/_new-listing-form.html.haml
@@ -135,8 +135,8 @@
 
         .listing__form__price__box__fee
           %p 販売手数料(10%)
-          %p -
+          %p#salesfee -
 
         .listing__form__price__box__profit
           %p 販売利益
-          %p -
+          %p#salesprofit -
