--- a/app/assets/stylesheets/products/listing.scss
+++ b/app/assets/stylesheets/products/listing.scss
@@ -95,6 +95,7 @@
             display: flex;
             justify-content: space-around;
             a{
+              border-left: 1px solid #eee;
               display: inline-block;
               width: 50%;
               background: #f5f5f5;
