背景画像の表示を変更

--- a/app/assets/stylesheets/signup.scss
+++ b/app/assets/stylesheets/signup.scss
@@ -125,7 +125,8 @@ main.signup-main{
           color: black;
           background: #fffffe;
           margin-top: 16px;
-          background: #fff url("/assets/google.svg/") ;
+          background: #fff;
+          background-image: image-url("google.svg") ;
           background-repeat: no-repeat;
         }
       }
