--- a/app/assets/stylesheets/users/mypage.scss
+++ b/app/assets/stylesheets/users/mypage.scss
@@ -16,7 +16,7 @@
   .mypage__main{
     .mypage__profile__icon-box{
       padding: 72px 16px 24px;
-      background: url(/assets/mypage/user-background.jpeg);
+      background-image: image-url("mypage/user-background.jpeg");
       text-align: center;
       img{
         border-radius: 50%;
