ログイン機能の画像表示変更

--- a/app/assets/stylesheets/registration_login.scss
+++ b/app/assets/stylesheets/registration_login.scss
@@ -93,7 +93,7 @@ body{
           background: #fffffe;
           margin-top: 16px;
           background: #fff;
-          background-image: image-url("google.svg/") ;
+          background-image: image-url("google.svg") ;
           background-repeat: no-repeat;
         }
       }
