--- a/app/assets/stylesheets/registration_login.scss
+++ b/app/assets/stylesheets/registration_login.scss
@@ -80,6 +80,7 @@ body{
         background: white;
         padding: 32px 64px;
         .btn-sns-facebook{
+          cursor: pointer;
           background: #385185;
           i.fa-facebook-square{
             margin: 8px 0 0 8px;
