--- a/app/assets/stylesheets/products/products-detail.scss
+++ b/app/assets/stylesheets/products/products-detail.scss
@@ -1,6 +1,6 @@
 .wrapper--item-detail {
   width: 100%;
-  margin: 0 auto;
+  margin: 30px auto;
   padding: 0px;
   background-color: #f5f5f5;
   font-family: 'Source Sans Pro', Helvetica , Arial, '游ゴシック体', 'YuGothic', 'メイリオ', 'Meiryo', sans-serif;
@@ -9,6 +9,7 @@
     margin: 0 auto;
     background-color: #fff;
     h1 {
+      padding-top: 30px;
       font-size: 25px;
       text-align: center;
     }
@@ -26,7 +27,7 @@
         margin: 0 auto;
       }
       &__thumbnails {
-        height: 75px;
+        height: auto;
         display: flex;
         flex-wrap: wrap;
         background-color: #f5f5f5;
@@ -234,7 +235,6 @@
       }
     }
     &__other_items {
-      padding-top: 30px;
       h2 {
         font-size: 22px;
         color: #0099e8;
