--- a/app/views/top/index.html.haml
+++ b/app/views/top/index.html.haml
@@ -2,6 +2,6 @@
   .header
     = render 'header'
   .content
-    = render 'content'  
+    = render partial: 'content', local: {products: @products}  
   .footer
     = render 'footer'
