--- a/app/views/shared/_edit-listing-form.html.haml
+++ b/app/views/shared/_edit-listing-form.html.haml
@@ -60,19 +60,37 @@
             必須
           = f.collection_select :category_id0, Category.all.take(13), :id, :name, {prompt: "---", selected: @bigcategory}, class: 'listing__form__detail__box__form-group__category-select', id: 'big-category'
 
-          .listing__form__detail__box__form-group.middle-category
-            %label
-              カテゴリー
-            %span.listing__form__detail__box__form-group__require
-              必須
-            = f.collection_select :category_id0,Category.all , :id, :name, {prompt: "---", selected: @middlecategory}, class: 'listing__form__detail__box__form-group__category-select'
-
-          .listing__form__detail__box__form-group.small-category
-            %label
-              カテゴリー
-            %span.listing__form__detail__box__form-group__require
-              必須
-            = f.collection_select :category_id, Category.all, :id, :name, {prompt: "---"}, class: 'listing__form__detail__box__form-group__category-select'
+        - (1...14).each do |e|
+          -if e == @bigcategory
+            .listing__form__detail__box__form-group.middle-category
+              %label
+                カテゴリー
+              %span.listing__form__detail__box__form-group__require
+                必須
+              = f.collection_select :category_id0,Category.find(e).children, :id, :name, {prompt: "---", selected: @middlecategory}, class: 'listing__form__detail__box__form-group__category-select'
+          -else 
+            .listing__form__detail__box__form-group.middle-category{style: 'display:none;'}
+              %label
+                カテゴリー
+              %span.listing__form__detail__box__form-group__require
+                必須
+              = f.collection_select :category_id0,Category.find(e).children, :id, :name, {prompt: "---", selected: @middlecategory}, class: 'listing__form__detail__box__form-group__category-select'
+        
+        - (14...159).each do |g|
+          -if g == @middlecategory
+            .listing__form__detail__box__form-group.small-category
+              %label
+                カテゴリー
+              %span.listing__form__detail__box__form-group__require
+                必須
+              = f.collection_select :category_id, Category.find(g).grandchildren, :id, :name, {prompt: "---"}, class: 'listing__form__detail__box__form-group__category-select'
+          -else
+            .listing__form__detail__box__form-group.small-category{style: 'display:none;'}
+              %label
+                カテゴリー
+              %span.listing__form__detail__box__form-group__require
+                必須
+              = f.collection_select :category_id, Category.find(g).grandchildren, :id, :name, {prompt: "---"}, class: 'listing__form__detail__box__form-group__category-select'
 
         .listing__form__detail__box__form-group
           %label
