--- a/app/views/products/edit.html.haml
+++ b/app/views/products/edit.html.haml
@@ -1,5 +1,5 @@
 = form_with model: @product, url: products_path, class: '.listing-edit', method: :post, local: true do |form|
   = render "shared/new-header"
-  = render "shared/edit-listing-form", f: form
+  = render "shared/listing-form", f: form
   = render "shared/edit-button", f: form
   = render "shared/new-footer"
