--- a/app/views/top/_content.html.haml
+++ b/app/views/top/_content.html.haml
@@ -54,3 +54,11 @@
             %span 6
     .contents__item__box__all-items-view
       全ての商品を見る
+
+
+
+
+  .camera
+    = link_to  new_product_path, class: 'listing-links' do
+      %a.camera__text 出品
+      %i.fas.fa-camera.camera__icon
