--- a/app/views/top/_content.html.haml
+++ b/app/views/top/_content.html.haml
@@ -58,7 +58,6 @@
 
 
 
-  .camera
-    = link_to  new_product_path, class: 'listing-links' do
-      %a.camera__text 出品
-      %i.fas.fa-camera.camera__icon
+  = link_to new_product_path, class: 'camera' do
+    .camera__text 出品
+    .fas.fa-camera.camera__icon
