--- a/app/views/shared/_listing-form.html.haml
+++ b/app/views/shared/_listing-form.html.haml
@@ -19,23 +19,27 @@
               = f.file_field :images, class:'listing-upload-drop-file',multiple:true
               %ul.listing-image-container
                 %li.image-box
-                %img#preview-zone
-              .button
-                %a.edit 編集
-                %a.delete 削除
+                  %img#preview-zone
+                .button
+                  %a.edit 編集
+                  %a.delete 削除
 
 
-              = f.file_field :images, class:'listing-upload-drop-file',multiple:true
-              = f.file_field :images, class:'listing-upload-drop-file',multiple:true
-              = f.file_field :images, class:'listing-upload-drop-file',multiple:true
-              = f.file_field :images, class:'listing-upload-drop-file',multiple:true
-              = f.file_field :images, class:'listing-upload-drop-file',multiple:true
-              = f.file_field :images, class:'listing-upload-drop-file',multiple:true
-              = f.file_field :images, class:'listing-upload-drop-file',multiple:true
-              = f.file_field :images, class:'listing-upload-drop-file',multiple:true
-              = f.file_field :images, class:'listing-upload-drop-file',multiple:true
-              = f.file_field :images, class:'listing-upload-drop-file',multiple:true
-              = f.file_field :images, class:'listing-upload-drop-file',multiple:true
+              -# = f.file_field :images, class:'listing-upload-drop-file',multiple:true
+              -# = f.file_field :images, class:'listing-upload-drop-file',multiple:true
+              -# = f.file_field :images, class:'listing-upload-drop-file',multiple:true
+              -# = f.file_field :images, class:'listing-upload-drop-file',multiple:true
+              -# = f.file_field :images, class:'listing-upload-drop-file',multiple:true
+              -# = f.file_field :images, class:'listing-upload-drop-file',multiple:true
+              -# = f.file_field :images, class:'listing-upload-drop-file',multiple:true
+              -# = f.file_field :images, class:'listing-upload-drop-file',multiple:true
+              -# = f.file_field :images, class:'listing-upload-drop-file',multiple:true
+              -# = f.file_field :images, class:'listing-upload-drop-file',multiple:true
+              -# = f.file_field :images, class:'listing-upload-drop-file',multiple:true
+
+     
+
+
             -# %label.listing__form__upload__box__preview
             -#   = f.file_field :images, class:'listing-upload-drop-file', multiple:true
             -# %label.listing__form__upload__box__preview
