--- a/app/views/shared/_listing-form.html.haml
+++ b/app/views/shared/_listing-form.html.haml
@@ -91,6 +91,13 @@
               %span.listing__form__detail__box__form-group__require
                 必須
               = f.collection_select :category_id, Category.find(g).grandchildren, :id, :name, {prompt: "---"}, class: 'listing__form__detail__box__form-group__category-select'
+        
+        .listing__form__detail__box__form-group.lastchoice-category{style: 'display:none;'}
+          %label
+            カテゴリー
+          %span.listing__form__detail__box__form-group__require
+            必須
+          = f.collection_select :category_id, Category.all, :id, :name, {prompt: "---"}, {class: 'listing__form__detail__box__form-group__category-select'}
 
         .listing__form__detail__box__form-group
           %label
