ページネーションの色付け

--- a/app/views/top/show.html.haml
+++ b/app/views/top/show.html.haml
@@ -17,7 +17,7 @@
               %i.fas.fa-angle-left
         %li.pagenation__numbers
           %ul.pagenation__numbers__box
-            %li.pagenation__numbers__box__cell.active 1
+            %li.pagenation__numbers__box__cell.now 1
             %li.pagenation__numbers__box__cell 2
             %li.pagenation__numbers__box__cell 3
             %li.pagenation__numbers__box__cell 4
