--- a/app/assets/stylesheets/top/_search_category.scss
+++ b/app/assets/stylesheets/top/_search_category.scss
@@ -63,6 +63,10 @@
         font-size: 14px;
         line-height: 46px;
       }
+      .now{
+        background: #ea352d;
+        color: white;
+      }
     }
   }
   &__leftarrows{
