--- a/app/views/top/show.html.haml
+++ b/app/views/top/show.html.haml
@@ -22,6 +22,7 @@
             %li.pagenation__numbers__box__cell 3
             %li.pagenation__numbers__box__cell 4
             %li.pagenation__numbers__box__cell 5
+        = paginate @products,window:2 
         %li.pagenation__rightarrows
           %ul.pagenation__rightarrows__box
             %li.pagenation__rightarrows__box__cell
