--- a/app/views/kaminari/_last_page.html.haml
+++ b/app/views/kaminari/_last_page.html.haml
@@ -1,9 +1,11 @@
--#  Link to the "Next" page
+-#  Link to the "Last" page
 -#  available local variables
--#    url:           url to the next page
+-#    url:           url to the last page
 -#    current_page:  a page object for the currently displayed page
 -#    total_pages:   total number of pages
 -#    per_page:      number of items to fetch per page
 -#    remote:        data-remote
-%span.next
-  = link_to_unless current_page.last?, t('views.pagination.next').html_safe, url, rel: 'next', remote: remote
+%li.pagenation__rightarrows__box__cell.last
+  - unless current_page.last?
+    = link_to url do
+      %i.fas.fa-angle-double-right
