--- a/app/views/kaminari/_next_page.html.haml
+++ b/app/views/kaminari/_next_page.html.haml
@@ -1,9 +1,11 @@
--#  Link to the "Previous" page
+-#  Link to the "Next" page
 -#  available local variables
--#    url:           url to the previous page
+-#    url:           url to the next page
 -#    current_page:  a page object for the currently displayed page
 -#    total_pages:   total number of pages
 -#    per_page:      number of items to fetch per page
 -#    remote:        data-remote
-%span.prev
-  = link_to_unless current_page.first?, t('views.pagination.previous').html_safe, url, rel: 'prev', remote: remote
+%li.pagenation__rightarrows__box__cell.next
+  - unless current_page.last?
+    = link_to url do
+      %i.fas.fa-angle-right
