--- a/app/views/kaminari/_prev_page.html.haml
+++ b/app/views/kaminari/_prev_page.html.haml
@@ -1,9 +1,11 @@
--#  Link to the "Last" page
+-#  Link to the "Previous" page
 -#  available local variables
--#    url:           url to the last page
+-#    url:           url to the previous page
 -#    current_page:  a page object for the currently displayed page
 -#    total_pages:   total number of pages
 -#    per_page:      number of items to fetch per page
 -#    remote:        data-remote
-%span.last
-  = link_to_unless current_page.last?, t('views.pagination.last').html_safe, url, remote: remote
+%li.pagenation__leftarrows__box__cell.prev
+  - unless current_page.first?
+    = link_to url do
+      %i.fas.fa-angle-left
